still working on mobile layout fixes

--- a/src/less/App.less
+++ b/src/less/App.less
@@ -199,6 +199,9 @@ footer {
 }
 
 @media screen and (max-width: 376px) {
+    body {
+        height:95%;
+    }
     .linkList{height: 70vh;}
     header {
         max-height: 25vh;
@@ -212,6 +215,9 @@ footer {
     }
     header img {
         max-height:5vh;
+    }
+    main {
+        padding-top:0.5vh;
     }
     .linkSquare { overflow: scroll; } /* Or change the height or whatever */ 
 }
